--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 </head>
 <div class=""></div>
 <body>
-    <nav class="navbar navbar-expand-lg bg-gray-800 navbar-dark">
+    <nav class="navbar navbar-expand-lg bg-gray-800 navbar-dark fixed-top">
         <p class="navbar-brand navbar-dark font-mono">Marco Rodrigues</p>
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -38,6 +38,9 @@
             <ul class="navbar-nav ml-auto">          
                 <li class="nav-item">
                     <a href="#" class="nav-link">About</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Services</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Projects</a>
@@ -77,55 +80,95 @@
                     </p>
                 </div>
             </div>
-            <div class="icons-container">
-                <div class="row">
-                    <div class="icon-container">
-                        <div class="icon-align">
-                            <i class="material-symbols-outlined md-80">equalizer</i>
-                            <span class="caption-icon">Data Analysis, Data Visualization, Dashbords (pandas, plotly, dash, ...)</span>
-                        </div>                            
-                        <div class="icon-align">
-                            <i class="material-symbols-outlined md-80">dvr</i>
-                            <span class="caption-icon">Web Development, CSS, HTML, Flask, Solidity</span>
-                        </div>
-                        <div class="icon-align">
-                            <i class="material-symbols-outlined md-80">precision_manufacturing</i>
-                            <span class="caption-icon">Automation, Python Scripting, Web Scraping, GUIs</span>
-                        </div>
+        </div>
+        <div class="icons-about-container">
+            <div class="row">
+                <div class="icon-about-container">
+                    <h3 class="subtitle">Find me here:</h3>
+                    <div class="icon-about-align">
+                        <p>
+                            <a href="https://www.linkedin.com/in/macrodrigues/">
+                                <img alt="linkedin" width="40px" src="static/images/icons/linkedin.png" class="img-icon" />
+                            </a>
+                        </p>
+                        <p>
+                            <a href="https://github.com/macrodrigues">
+                                <img alt="github" width="40px" src="static/images/icons/github.png" class="img-icon" />
+                            </a>
+                        </p>
+                        <p>
+                            <a href="https://peakd.com/@macrodrigues">
+                                <img alt="pakd" width="50px" src="static/images/icons/peakd.png" class="img-icon"/>
+                            </a>
+                        </p>        
+                        <p>
+                            <a href="kaggle.com/marcocavaco">
+                                <img alt="kaggle" width="90px" src="static/images/icons/kaggle.png" class="img-icon"/>
+                            </a>
+                        </p>
+                        <p>
+                            <a href="https://stackoverflow.com/marco-rodrigues">
+                                <img alt="stack-overflow" width="190px" src="static/images/icons/stack-overflow.png" class="img-icon"/>
+                            </a>
+                        </p>         
                     </div>
                 </div>
             </div>
-            <div class="prog-bars">
-                <div class="prog-bar">
-                    <h4 class="title-progress">Data Analysis</h4>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="80"
-                        aria-valuemin="0" aria-valuemax="100" style="width:80%">
-                        </div>
+        </div>
+    </div>
+    <!--Services Section-->
+    <div class="services-section">
+        <div class="services-header">
+            <h1 class="services-title">Services</h1>
+        </div>
+        <div class="icons-container">
+            <div class="row">
+                <div class="icon-container">
+                    <div class="icon-align">
+                        <i class="material-symbols-outlined md-100">equalizer</i>
+                        <span class="caption-icon">Data Analysis, Data Visualization, Dashbords (pandas, plotly, dash, ...)</span>
+                    </div>                            
+                    <div class="icon-align">
+                        <i class="material-symbols-outlined md-100">dvr</i>
+                        <span class="caption-icon">Web Development, CSS, HTML, Flask, Solidity</span>
+                    </div>
+                    <div class="icon-align">
+                        <i class="material-symbols-outlined md-100">precision_manufacturing</i>
+                        <span class="caption-icon">Automation, Python Scripting, Web Scraping, GUIs</span>
                     </div>
                 </div>
-                <div class="prog-bar">
-                    <h4 class="title-progress">Python Scripting</h4>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="80"
-                        aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                        </div>
+            </div>
+        </div>
+        <div class="prog-bars">
+            <div class="prog-bar">
+                <h4 class="title-progress">Data Analysis</h4>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="80"
+                    aria-valuemin="0" aria-valuemax="100" style="width:80%">
                     </div>
                 </div>
-                <div class="prog-bar">
-                    <h4 class="title-progress">Data Science</h4>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="80"
-                        aria-valuemin="0" aria-valuemax="100" style="width:55%">
-                        </div>
+            </div>
+            <div class="prog-bar">
+                <h4 class="title-progress">Python Scripting</h4>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="80"
+                    aria-valuemin="0" aria-valuemax="100" style="width:70%">
                     </div>
                 </div>
-                <div class="prog-bar">
-                    <h4 class="title-progress">Web Development</h4>
-                    <div class="progress">
-                        <div class="progress-bar" role="progressbar" aria-valuenow="80"
-                        aria-valuemin="0" aria-valuemax="100" style="width:40%">
-                        </div>
+            </div>
+            <div class="prog-bar">
+                <h4 class="title-progress">Data Science</h4>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="80"
+                    aria-valuemin="0" aria-valuemax="100" style="width:55%">
+                    </div>
+                </div>
+            </div>
+            <div class="prog-bar">
+                <h4 class="title-progress">Web Development</h4>
+                <div class="progress">
+                    <div class="progress-bar" role="progressbar" aria-valuenow="80"
+                    aria-valuemin="0" aria-valuemax="100" style="width:40%">
                     </div>
                 </div>
             </div>
