--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="static/css/styles.css">
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,10 +27,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marco's Portfolio</title>
+    <!-- add icon link -->
+    <link rel = "icon" href = "static/images/profile-pic.png" type = "image/x-icon" style="border-radius: 50%;">
 </head>
-<div class=""></div>
 <body>
-    <nav class="navbar navbar-expand-lg bg-gray-800 navbar-dark fixed-top">
+    <nav class="navbar navbar-custom navbar-expand-lg bg-gray-800 navbar-dark fixed-top">
         <p class="navbar-brand navbar-dark font-mono">Marco Rodrigues</p>
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -40,13 +42,10 @@
                     <a href="#" class="nav-link">About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Services</a>
+                    <a href="#" class="nav-link">Skills</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Projects</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Blog</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Contact</a>
@@ -60,24 +59,44 @@
             <div class="d-flex h-100">
                 <div class="text-white">
                     <h1 class="mb-3 h1-header">A breeze of my work</h1>
-                    <h4 class="mb-3 h4-header">Tails of a Data Scientist and Software Engineer</h4>
-                    <a class="btn btn-secondary" href="#!" role="button">Reach me</a>
+                    <h4 class="mb-3 h4-header">Tales of a Data Scientist and Software Engineer</h4>
                 </div>
-                <div class="d-flex profile-pic">
+                <div class="profile-pic">
                     <img src="static/images/profile-pic.png" alt="" style="border-radius: 50%;">
                 </div>
             </div>
         </div>
     </div>
     <!-- About Section -->
-    <div class="about-section">
+    <section class="about-section">
         <div class="about-container">
             <div class="about-header">
                 <h1 class="about-title">About</h1>
                 <div class="about-text">
                     <p>A hummingbird, always flying but standing enough time to be nurtured by knowledge and experiences. The passion for programming took over me, and since then I have been actively writing code for my own projects and progressively at work. Later last year, I enrolled in a Data Science bootcamp, that opened me the door to this new world of software engineering.
-                        Can't stop being creative, it doesn't matter if it's in programming, DIY, cooking... My brain is always exploding with ideas ready to be applied in the most diverse fields.
+                        Can't stop being creative, it doesn't matter if it's in programming, DIY, cooking... My brain is always exploding with ideas ready to be applied in the most diverse fields. Currently a software engineer at CNES, French Space Agency.
                     </p>
+                </div>
+            </div>
+        </div>
+        <div class="langs-icons-about-container">
+            <div class="row">
+                <div class="icon-about-container">
+                    <h3 class="subtitle">Languages:</h3>
+                    <div class="icon-about-align">
+                        <p class="p-img-icon">
+                            <img alt="portugal" width="30px" src="static/images/icons/portugal.png" class="lang-img-icon" />
+                        </p>
+                        <p class="p-img-icon">
+                            <img alt="uk" width="30px" src="static/images/icons/united-kingdom.png" class="lang-img-icon" />
+                        </p>
+                        <p class="p-img-icon">
+                            <img alt="france" width="30px" src="static/images/icons/france.png" class="lang-img-icon"/>
+                        </p>        
+                        <p class="p-img-icon">
+                            <img alt="spain" width="30px" src="static/images/icons/spain.png" class="lang-img-icon"/>
+                        </p>       
+                    </div>
                 </div>
             </div>
         </div>
@@ -86,27 +105,27 @@
                 <div class="icon-about-container">
                     <h3 class="subtitle">Find me here:</h3>
                     <div class="icon-about-align">
-                        <p>
+                        <p class="p-img-icon">
                             <a href="https://www.linkedin.com/in/macrodrigues/">
                                 <img alt="linkedin" width="40px" src="static/images/icons/linkedin.png" class="img-icon" />
                             </a>
                         </p>
-                        <p>
+                        <p class="p-img-icon">
                             <a href="https://github.com/macrodrigues">
                                 <img alt="github" width="40px" src="static/images/icons/github.png" class="img-icon" />
                             </a>
                         </p>
-                        <p>
+                        <p class="p-img-icon">
                             <a href="https://peakd.com/@macrodrigues">
                                 <img alt="pakd" width="50px" src="static/images/icons/peakd.png" class="img-icon"/>
                             </a>
                         </p>        
-                        <p>
+                        <p class="p-img-icon">
                             <a href="kaggle.com/marcocavaco">
                                 <img alt="kaggle" width="90px" src="static/images/icons/kaggle.png" class="img-icon"/>
                             </a>
                         </p>
-                        <p>
+                        <p class="p-img-icon">
                             <a href="https://stackoverflow.com/marco-rodrigues">
                                 <img alt="stack-overflow" width="190px" src="static/images/icons/stack-overflow.png" class="img-icon"/>
                             </a>
@@ -115,11 +134,11 @@
                 </div>
             </div>
         </div>
-    </div>
-    <!--Services Section-->
-    <div class="services-section">
-        <div class="services-header">
-            <h1 class="services-title">Services</h1>
+    </section>
+    <!--skills Section-->
+    <div class="skills-section">
+        <div class="skills-header">
+            <h1 class="skills-title">Skills</h1>
         </div>
         <div class="icons-container">
             <div class="row">
@@ -172,6 +191,141 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <!--Projects Section-->
+    <div class="projects-section">
+        <div class="projects-header">
+            <h1 class="projects-title">Projects</h1>
+        </div>
+        <div>
+          <div class="row">
+            <!-- Gallery item -->
+            <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+              <div class="bg-white rounded shadow-sm">
+                  <a href="https://peakd.com/hive-163521/@macrodrigues/building-a-dashboard-with-dash-and-plotly">
+                    <img src="https://images.hive.blog/0x0/https://files.peakd.com/file/peakd-hive/macrodrigues/23tw9treuKswcSvpTHzRv16Y9STBJGjzSY4URHFd52ShsDcVUW62pD4nXfjmni1Ce7cp8.png" width="30px" alt="" class="img-fluid card-img-top">
+                  </a>    
+                <div class="p-4">
+                  <h5 class="title-img-gallery">Building a dashboard with Dash and Plotly</h5>
+                  <p class="small text-muted mb-0">Dash library from Plotly. Allows to build HTML and CSS components, that can easily be connected to Plotly graphs and other components. Here a simple example of a dashboard with data of exoplanets from NASA database. </p>
+                </div>
+              </div>
+            </div>
+            <!-- End -->
+      
+            <!-- Gallery item -->
+            <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+                <div class="bg-white rounded shadow-sm">
+                    <a href="https://peakd.com/hive-169321/@macrodrigues/extract-attachments-from-email-with-python">
+                      <img src="https://images.hive.blog/0x0/https://files.peakd.com/file/peakd-hive/macrodrigues/23viPHv5Tc3xZTfomVEbU4NBCaBzCuZvzGDFmgrUXHvLC43Ua2a1kWiqTi3GRmGHyWfmX.png" width="30px" alt="" class="img-fluid card-img-top">
+                    </a>    
+                  <div class="p-4">
+                    <h5 class="title-img-gallery">Extract attachments from email with Python</h5>
+                    <p class="small text-muted mb-0">pywin 32 is python library for windows, adapted from VBA, which allows to interact with outlook.</p>
+                  </div>
+                </div>
+            </div>
+            <!-- End -->
+      
+            <!-- Gallery item -->
+            <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+                <div class="bg-white rounded shadow-sm">
+                    <a href="https://peakd.com/hive-163521/@macrodrigues/building-and-apk-to-detect-mediterranean-butterflies">
+                      <img src="https://images.hive.blog/0x0/https://files.peakd.com/file/peakd-hive/macrodrigues/EpEEva5cF9qQQteMEes1QXJcqg9cLsz44YGAFzacv6xx4GouC6Ef27GvA4JaJ5r6Jjt.JPG" alt="" class="img-fluid card-img-top">
+                    </a>    
+                  <div class="p-4">
+                    <h5 class="title-img-gallery">Building an APK to detect mediterranean butterflies</h5>
+                    <p class="small text-muted mb-0">Using Kivy and Buildozer Python libraries, to generate an .apk. Debugging using android studio.</p>
+                  </div>
+                </div>
+            </div>
+            <!-- End -->
+      
+            <!-- Gallery item -->
+            <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+                <div class="bg-white rounded shadow-sm">
+                    <a href="https://peakd.com/hive-163521/@macrodrigues/butterfly-detector-using-cnn">
+                      <img src="https://images.hive.blog/0x0/https://files.peakd.com/file/peakd-hive/macrodrigues/23wWyFs5wbWiXjMsCuKCBVEeD2qWbogcaWBRCBRmihSNkwYsHdjsjaHrox6G4qMx1VrCJ.JPG" alt="" class="img-fluid card-img-top">
+                    </a>    
+                  <div class="p-4">
+                    <h5 class="title-img-gallery">Butterfly detector using CNN</h5>
+                    <p class="small text-muted mb-0">Using CNN transfer learning to detect 11 different species of southern mediterranean butterflies.</p>
+                  </div>
+                </div>
+            </div>
+            <!-- End -->
+      
+            <!-- Gallery item -->
+            <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+                <div class="bg-white rounded shadow-sm">
+                    <a href="https://peakd.com/hive-163521/@macrodrigues/using-nlp-on-job-descriptions">
+                      <img src="https://images.hive.blog/0x0/https://files.peakd.com/file/peakd-hive/macrodrigues/23wCbRqgxQryjEutixtT61x5JisBR6eJCTKwnytrN3wj8QEADED5atfiKu5G6ADPmVzfz.png" alt="" class="img-fluid card-img-top">
+                    </a>    
+                  <div class="p-4">
+                    <h5 class="title-img-gallery">Using NLP on Job Descriptions</h5>
+                    <p class="small text-muted mb-0">NLP models were developed in order to detect skills, knowledge, minimum experience and levels (degree) in job descriptions. </p>
+                    <a href="https://skills-matcher-best.herokuapp.com/" class="heroku">Heroku App</a>
+                  </div>
+                </div>
+            </div>
+            <!-- End -->
+      
+            <!-- Gallery item -->
+            <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+                <div class="bg-white rounded shadow-sm">
+                    <a href="https://github.com/macrodrigues/plantasia">
+                      <img src="https://user-images.githubusercontent.com/62621924/147284141-995f4628-bd49-4e75-be52-53717efe0554.png" alt="" class="img-fluid card-img-top">
+                    </a>    
+                  <div class="p-4">
+                    <h5 class="title-img-gallery">Tkinter GUI to be used as a repository for plants and muchrooms.</h5>
+                    <p class="small text-muted mb-0">The user can easily look for species, families and properties and customize the GUI as he wants, by adding/removing species.</p>
+                  </div>
+                </div>
+            </div>
+            <!-- End -->
+
+            <!-- Gallery item -->
+            <div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+                <div class="bg-white rounded shadow-sm">
+                    <a href="https://peakd.com/hive-169321/@macrodrigues/btc-eth-steem-and-hive-analysis-using-python-from-2020-to-2021">
+                      <img src="https://images.hive.blog/0x0/https://files.peakd.com/file/peakd-hive/macrodrigues/23wXQYGimn7Mp7r5Cu1Zxvmwc1zYtM1zihMZqiVvy5zEGo1bgGKGNAqykoHVtQQRuhibn.png" alt="" class="img-fluid card-img-top">
+                    </a>    
+                  <div class="p-4">
+                    <h5 class="title-img-gallery">BTC, ETH, STEEM and HIVE analysis using Python (from 2020 to 2021).</h5>
+                    <p class="small text-muted mb-0">Crypto Market study of BTC, ETH, STEEM and HIVE, from 2020 to 2021 (one full year). The main goal of this analysis, is to make a comparison of these four cryptocurrencies, using several python libraries and statistical analysis.</p>
+                  </div>
+                </div>
+            </div>
+            <!-- End -->   
+    </div>
+    <div class="contact-section">
+        <div class="contact-header">
+            <h1 class="contact-title">Contact</h1>
+        </div>
+        <div class="contact-container">
+            <form action="" class="contact-form">
+                <div class="contact-input" data-validate="Name is required">
+                    <span class="contact-label-input">Full Name:</span>
+                        <input class="form-control" type="text" name="name" placeholder="Enter full name">
+                    <span class="focus-input"></span>
+                </div>
+                <div class="contact-input" data-validate="Valid email is required: ex@abc.xyz">
+                    <span class="contact-label-input">Email:</span>
+                        <input class="form-control" type="text" name="name" placeholder="Enter email addess">
+                    <span class="focus-input"></span>
+                </div>
+                <div class="contact-input" data-validate="Phone is required">
+                    <span class="contact-label-input">Phone:</span>
+                        <input class="form-control" type="text" name="name" placeholder="Enter phone number">
+                    <span class="focus-input"></span>
+                </div>
+                <div class="contact-input" data-validate="Message is required">
+                    <span class="contact-label-input">Message:</span>
+                        <textarea class="form-control" name="message" style="height: 200%;" placeholder="Your Comment..."></textarea>
+                    <span class="focus-input"></span>
+                </div>
+            </form>
         </div>
     </div>
 </body>
