--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,29 +27,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marco's Portfolio</title>
+    <title>Marco Rodrigues</title>
     <!-- add icon link -->
     <link rel = "icon" href = "static/images/profile-pic.png" type = "image/x-icon" style="border-radius: 50%;">
 </head>
 <body>
     <nav class="navbar navbar-custom navbar-expand-lg bg-gray-800 navbar-dark fixed-top">
-        <p class="navbar-brand navbar-dark font-mono">Marco Rodrigues</p>
+        <a href="#"><p class="navbar-brand navbar-dark font-mono">Marco Rodrigues</p></a>
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav ml-auto">          
                 <li class="nav-item">
-                    <a href="#" class="nav-link">About</a>
+                    <a href="#skills" class="nav-link">Skills</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Skills</a>
+                    <a href="#projects" class="nav-link">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Projects</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#" class="nav-link">Contact</a>
+                    <a href="#contact" class="nav-link">Contact</a>
                 </li>                        
             </ul>
         </div>
@@ -106,7 +104,7 @@
                     <h3 class="subtitle">Find me here:</h3>
                     <div class="icon-about-align">
                         <p class="p-img-icon">
-                            <a href="https://www.linkedin.com/in/macrodrigues/">
+                            <a href="www.linkedin.com/in/macrodrigues">
                                 <img alt="linkedin" width="40px" src="static/images/icons/linkedin.png" class="img-icon" />
                             </a>
                         </p>
@@ -121,12 +119,12 @@
                             </a>
                         </p>        
                         <p class="p-img-icon">
-                            <a href="kaggle.com/marcocavaco">
+                            <a href="https://www.kaggle.com/marcocavaco/">
                                 <img alt="kaggle" width="90px" src="static/images/icons/kaggle.png" class="img-icon"/>
                             </a>
                         </p>
                         <p class="p-img-icon">
-                            <a href="https://stackoverflow.com/marco-rodrigues">
+                            <a href="https://stackoverflow.com/users/17751176/marco-rodrigues">
                                 <img alt="stack-overflow" width="190px" src="static/images/icons/stack-overflow.png" class="img-icon"/>
                             </a>
                         </p>         
@@ -135,66 +133,66 @@
             </div>
         </div>
     </section>
-    <!--skills Section-->
-    <div class="skills-section">
+    <!--skills section-->
+    <div class="skills-section" id="skills">
         <div class="skills-header">
             <h1 class="skills-title">Skills</h1>
-        </div>
-        <div class="icons-container">
-            <div class="row">
-                <div class="icon-container">
-                    <div class="icon-align">
-                        <i class="material-symbols-outlined md-100">equalizer</i>
-                        <span class="caption-icon">Data Analysis, Data Visualization, Dashbords (pandas, plotly, dash, ...)</span>
-                    </div>                            
-                    <div class="icon-align">
-                        <i class="material-symbols-outlined md-100">dvr</i>
-                        <span class="caption-icon">Web Development, CSS, HTML, Flask, Solidity</span>
-                    </div>
-                    <div class="icon-align">
-                        <i class="material-symbols-outlined md-100">precision_manufacturing</i>
-                        <span class="caption-icon">Automation, Python Scripting, Web Scraping, GUIs</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="prog-bars">
-            <div class="prog-bar">
-                <h4 class="title-progress">Data Analysis</h4>
-                <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="80"
-                    aria-valuemin="0" aria-valuemax="100" style="width:80%">
+            <div class="icons-container">
+                <div class="row">
+                    <div class="icon-container">
+                        <div class="icon-align">
+                            <i class="material-symbols-outlined md-100">equalizer</i>
+                            <span class="caption-icon">Data Analysis, Data Visualization, Dashbords (pandas, plotly, dash, ...)</span>
+                        </div>                            
+                        <div class="icon-align">
+                            <i class="material-symbols-outlined md-100">dvr</i>
+                            <span class="caption-icon">Web Development, CSS, HTML, Flask, Solidity</span>
+                        </div>
+                        <div class="icon-align">
+                            <i class="material-symbols-outlined md-100">precision_manufacturing</i>
+                            <span class="caption-icon">Automation, Python Scripting, Web Scraping, GUIs</span>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="prog-bar">
-                <h4 class="title-progress">Python Scripting</h4>
-                <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="80"
-                    aria-valuemin="0" aria-valuemax="100" style="width:70%">
+            <div class="prog-bars">
+                <div class="prog-bar">
+                    <h4 class="title-progress">Data Analysis</h4>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="80"
+                        aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="prog-bar">
-                <h4 class="title-progress">Data Science</h4>
-                <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="80"
-                    aria-valuemin="0" aria-valuemax="100" style="width:55%">
+                <div class="prog-bar">
+                    <h4 class="title-progress">Python Scripting</h4>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="80"
+                        aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="prog-bar">
-                <h4 class="title-progress">Web Development</h4>
-                <div class="progress">
-                    <div class="progress-bar" role="progressbar" aria-valuenow="80"
-                    aria-valuemin="0" aria-valuemax="100" style="width:40%">
+                <div class="prog-bar">
+                    <h4 class="title-progress">Data Science</h4>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="80"
+                        aria-valuemin="0" aria-valuemax="100" style="width:55%">
+                        </div>
+                    </div>
+                </div>
+                <div class="prog-bar">
+                    <h4 class="title-progress">Web Development</h4>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="80"
+                        aria-valuemin="0" aria-valuemax="100" style="width:40%">
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <!--Projects Section-->
-    <div class="projects-section">
+    <div class="projects-section" id="projects">
         <div class="projects-header">
             <h1 class="projects-title">Projects</h1>
         </div>
@@ -299,12 +297,14 @@
             </div>
             <!-- End -->   
     </div>
-    <div class="contact-section">
+
+    <!-- contact section -->
+    <div class="contact-section" id="contact">
         <div class="contact-header">
             <h1 class="contact-title">Contact</h1>
         </div>
         <div class="contact-container">
-            <form action="" class="contact-form">
+            <form action="/submit" method="post" class="contact-form">
                 <div class="contact-input" data-validate="Name is required">
                     <span class="contact-label-input">Full Name:</span>
                         <input class="form-control" type="text" name="name" placeholder="Enter full name">
@@ -312,12 +312,12 @@
                 </div>
                 <div class="contact-input" data-validate="Valid email is required: ex@abc.xyz">
                     <span class="contact-label-input">Email:</span>
-                        <input class="form-control" type="text" name="name" placeholder="Enter email addess">
+                        <input class="form-control" type="text" name="mail" placeholder="Enter email addess">
                     <span class="focus-input"></span>
                 </div>
                 <div class="contact-input" data-validate="Phone is required">
                     <span class="contact-label-input">Phone:</span>
-                        <input class="form-control" type="text" name="name" placeholder="Enter phone number">
+                        <input class="form-control" type="text" name="phone" placeholder="Enter phone number">
                     <span class="focus-input"></span>
                 </div>
                 <div class="contact-input" data-validate="Message is required">
@@ -325,8 +325,14 @@
                         <textarea class="form-control" name="message" style="height: 200%;" placeholder="Your Comment..."></textarea>
                     <span class="focus-input"></span>
                 </div>
+                <div class="submit-container">
+                    <button class="button-1" type="submit">Submit</button>
+                </div>
             </form>
         </div>
     </div>
+    <footer style="background-color: #f5deb33b; padding-top: 3%;">
+        <p>Still running in {{year}}. Built with &#129505 by Me.</p>
+    </footer>
 </body>
 </html>
