--- a/templates/index.html
+++ b/templates/index.html
@@ -104,27 +104,27 @@
                     <h3 class="subtitle">Find me here:</h3>
                     <div class="icon-about-align">
                         <p class="p-img-icon">
-                            <a href="www.linkedin.com/in/macrodrigues">
+                            <a href="https://www.linkedin.com/in/macrodrigues" target="_blank">
                                 <img alt="linkedin" width="40px" src="static/images/icons/linkedin.png" class="img-icon" />
                             </a>
                         </p>
                         <p class="p-img-icon">
-                            <a href="https://github.com/macrodrigues">
+                            <a href="https://github.com/macrodrigues" target="_blank">
                                 <img alt="github" width="40px" src="static/images/icons/github.png" class="img-icon" />
                             </a>
                         </p>
                         <p class="p-img-icon">
-                            <a href="https://peakd.com/@macrodrigues">
+                            <a href="https://peakd.com/@macrodrigues" target="_blank">
                                 <img alt="pakd" width="50px" src="static/images/icons/peakd.png" class="img-icon"/>
                             </a>
                         </p>        
                         <p class="p-img-icon">
-                            <a href="https://www.kaggle.com/marcocavaco/">
+                            <a href="https://www.kaggle.com/marcocavaco/" target="_blank">
                                 <img alt="kaggle" width="90px" src="static/images/icons/kaggle.png" class="img-icon"/>
                             </a>
                         </p>
                         <p class="p-img-icon">
-                            <a href="https://stackoverflow.com/users/17751176/marco-rodrigues">
+                            <a href="https://stackoverflow.com/users/17751176/marco-rodrigues" target="_blank">
                                 <img alt="stack-overflow" width="190px" src="static/images/icons/stack-overflow.png" class="img-icon"/>
                             </a>
                         </p>         
